# Ethernaut-Ape

./: LICENSE  README.md
12-Privacy_DONE/.build/: __local__.json
12-Privacy_DONE/contracts/: Privacy.sol
12-Privacy_DONE/scripts/: attack.py
13-gatekeeper_one_DONE/: README.md  ape-config.yaml  pyproject.toml
13-gatekeeper_one_DONE/contracts/: GatekeeperOne.sol  GatekeeperOneAttack.sol
13-gatekeeper_one_DONE/scripts/: attack.py
14-gatekeeper-two/: ape-config.yaml
14-gatekeeper-two/src/_14_gatekeeper_two/: __init__.py
14-gatekeeper-two_DONE/: README.md  pyproject.toml
14-gatekeeper-two_DONE/contracts/: GatekeeperTwoAttack.sol
14-gatekeeper-two_DONE/scripts/: attack.py
15-naught-coin_DONE/: README.md  ape-config.yaml  pyproject.toml
15-naught-coin_DONE/contracts/: NaughtCoinAttack.sol
15-naught-coin_DONE/contracts/interfaces/: IERC20.sol
15-naught-coin_DONE/scripts/: attack.py
16-preservation_DONE/: .cruft.json  README.md  ape-config.yaml  pyproject.toml
16-preservation_DONE/contracts/: Attack.sol  Preservation.sol
16-preservation_DONE/scripts/: attack.py
18-magicnum/: .cruft.json  README.md  ape-config.yaml  pyproject.toml
18-magicnum/scripts/: attack.py
